<resources>
    <string name="app_name">Blurred Basket</string>
    <string name="application_name">Blurred Basket</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="onboarding_title">Better product finding starts here.</string>
    <string name="log_me_in">Log me in!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_me_up">Sign me up!</string>
    <string name="register_form_title">Create a new account</string>
    <string name="back_button">Back Button</string>
    <string name="register_form_description">You are one more step from great products.</string>
    <string name="home_carousel_image_content_description">Home Carousel Banner</string>
    <string name="home_products_list_item_image_content_description">Product image</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="products">Products</string>
    <string name="create_product_button_content_description">Create Product Button</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="seller_username">seller_username</string>
    <string name="product_name">Product Name</string>
    <string name="price_label">Price</string>
    <string name="product_price">Product Price</string>
    <string name="carousel_image">Carousel image</string>
    <string name="create_product_image_info">You may pick 3 to 5 images.</string>
    <string name="create_product_delete_image_info">To delete an image, click on the image.</string>
    <string name="product_seller_name">Product Seller Name</string>
    <string name="product_price_placeholder">Product Price</string>

    <string-array name="planets_array">
        <item>Seller</item>
        <item>Customer</item>
    </string-array>
</resources>