<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    style="?attr/materialCardViewFilledStyle"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/home_products_item_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:src="@drawable/cleaning_supplies"
                android:scaleType="centerCrop"
                android:contentDescription="@string/home_products_list_item_image_content_description" />

            <com.google.android.material.chip.Chip
                android:id="@+id/seller_product_status_chip"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="Status"
                style="@style/PassImageStatusChip"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/home_products_item_name"
                android:fontFamily="@font/rubik_medium"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_title"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/home_products_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/product_price_placeholder"
                android:textColor="@color/blue_900"
                />

            <TextView
                android:id="@+id/home_products_item_seller_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/product_seller_name"
               android:fontFamily="@font/rubik_regular"
                />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>