<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_dialog_bg"
    android:paddingBottom="32dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        app:tint="@color/blue_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:textColor="#0D47A1"
        android:textSize="32sp"
        android:fontFamily="@font/rubik_medium"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/emailEditText"
        android:background="@drawable/input_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Custom.EditText"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:background="@drawable/input_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Custom.EditText"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:backgroundTint="@color/blue_800"
        android:id="@+id/login_trigger_button"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:text="@string/log_me_in"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        android:fontFamily="@font/rubik_regular"/>


</androidx.constraintlayout.widget.ConstraintLayout>